Adaptando el menú de navegación para dispositivos móviles

--- a/src/partials/navigation-menu.html
+++ b/src/partials/navigation-menu.html
@@ -1,19 +1,17 @@
 <ul class="menu">
-    <a href="#"><li>Login</li></a>
-    <a href="#">
-        <li>
+    <li><a class="padding-bottom-0 padding-left-0" href="#">Login</a></li>
+    <li><a class="padding-bottom-0" href="#">
             <i class="fi-shopping-cart">Cart</i>
-        </li>
-    </a>
+    </a></li>
 </ul>
-<div>
+<div class="show-for-large">
     <hr>
-    <h2 class="h6">
+    <h2 class="h6 margin-bottom-0">
         <strong>Fake tattoos made by real artists</strong>
         <small>Enviados con amor desde Bogotá</small>
     </h2>
 </div>
-<div>
+<div class="show-for-medium">
     <hr>
     <div class="input-group">
         <input class="input-group-field small search" type="text" placeholder="Search..">
