--- a/src/partials/custom-images.html
+++ b/src/partials/custom-images.html
@@ -1,8 +1,8 @@
 <div class="grid-x grid-margin-x">
-  <div class="large-6 cell">
+  <div class="small-6 cell">
     <img src="../assets/img/pride.jpg"alt="Be pride of you">
   </div>
-  <div class="large-6 cell">
+  <div class="small-6 cell">
     <img src="../assets/img/custom_italy.jpg"alt="Custom Italy">
   </div>
 </div>
