--- a/src/partials/list.html
+++ b/src/partials/list.html
@@ -5,7 +5,7 @@
                 {{> sidebar}}
             </div>
             <div class="cell large-9">
-                listado de productos
+                {{> products}}
             </div>
         </div>
     </div>
