--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,9 +1,95 @@
 <div class="grid-x grid-margin-x grid-margin-y">
-    {{#repeat 25}}
+    {{#repeat 2}}
     <div class="cell small-6 medium-4 large-3 product">
-        <span class="label new"> Nuevo </span>
         <img class="normal" src="assets/img/products/bird.png" alt="bird" />
         <img class="hover" src="assets/img/products/bird1.png" alt="bird" />
+        <span class="label promo"> 
+            2 x 10$ <i class="fi-shopping-cart"> </i>
+        </span>
+    </div>
+    {{/repeat}}
+    {{#repeat 2}}
+    <div class="cell small-6 medium-4 large-3 product">
+        <span class="label new"> Nuevo </span>
+        <img class="normal" src="assets/img/products/f.png" alt="flamenco" />
+        <img class="hover" src="assets/img/products/f1.png" alt="flamenco" />
+        <span class="label promo"> 
+            2 x 10$ <i class="fi-shopping-cart"> </i>
+        </span>
+    </div>
+    {{/repeat}}
+     {{#repeat 2}}
+    <div class="cell small-6 medium-4 large-3 product">
+        <span class="label new"> Nuevo </span>
+        <img class="normal" src="assets/img/products/abird.png" alt="bird" />
+        <img class="hover" src="assets/img/products/abird1.png" alt="bird" />
+        <span class="label promo"> 
+            2 x 10$ <i class="fi-shopping-cart"> </i>
+        </span>
+    </div>
+    {{/repeat}}
+      {{#repeat 2}}
+    <div class="cell small-6 medium-4 large-3 product">
+        <img class="normal" src="assets/img/products/mini.png" alt="mini" />
+        <img class="hover" src="assets/img/products/mini1.png" alt="mini" />
+        <span class="label promo"> 
+            2 x 10$ <i class="fi-shopping-cart"> </i>
+        </span>
+    </div>
+    {{/repeat}}
+     {{#repeat 2}}
+    <div class="cell small-6 medium-4 large-3 product">
+        <img class="normal" src="assets/img/products/moon.png" alt="moon" />
+        <img class="hover" src="assets/img/products/moon1.png" alt="moon" />
+        <span class="label promo"> 
+            2 x 10$ <i class="fi-shopping-cart"> </i>
+        </span>
+    </div>
+    {{/repeat}}
+     {{#repeat 2}}
+    <div class="cell small-6 medium-4 large-3 product">
+        <span class="label new"> Nuevo </span>
+        <img class="normal" src="assets/img/products/plant.png" alt="plant" />
+        <img class="hover" src="assets/img/products/plant1.png" alt="plant" />
+        <span class="label promo"> 
+            2 x 10$ <i class="fi-shopping-cart"> </i>
+        </span>
+    </div>
+    {{/repeat}}
+     {{#repeat 2}}
+    <div class="cell small-6 medium-4 large-3 product">
+        <img class="normal" src="assets/img/products/resist.png" alt="resist" />
+        <img class="hover" src="assets/img/products/resist1.png" alt="resist" />
+        <span class="label promo"> 
+            2 x 10$ <i class="fi-shopping-cart"> </i>
+        </span>
+    </div>
+    {{/repeat}}
+    {{#repeat 2}}
+    <div class="cell small-6 medium-4 large-3 product">
+        <span class="label new"> Nuevo </span>
+        <img class="normal" src="assets/img/products/serpent.png" alt="serpent" />
+        <img class="hover" src="assets/img/products/serpent1.png" alt="serpent" />
+        <span class="label promo"> 
+            2 x 10$ <i class="fi-shopping-cart"> </i>
+        </span>
+    </div>
+    {{/repeat}}
+    {{#repeat 2}}
+    <div class="cell small-6 medium-4 large-3 product">
+        <span class="label new"> Nuevo </span>
+        <img class="normal" src="assets/img/products/set.png" alt="set" />
+        <img class="hover" src="assets/img/products/set1.png" alt="set" />
+        <span class="label promo"> 
+            2 x 10$ <i class="fi-shopping-cart"> </i>
+        </span>
+    </div>
+    {{/repeat}}
+    {{#repeat 2}}
+    <div class="cell small-6 medium-4 large-3 product">
+        <span class="label new"> Nuevo </span>
+        <img class="normal" src="assets/img/products/wine.png" alt="wine" />
+        <img class="hover" src="assets/img/products/wine1.png" alt="wine" />
         <span class="label promo"> 
             2 x 10$ <i class="fi-shopping-cart"> </i>
         </span>
