--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation</title>
+    <title>Tattly</title>
     <link rel="stylesheet" href="{{root}}assets/fonts/foundation-icons/foundation-icons.css">
     <link rel="stylesheet" href="{{root}}assets/css/app.css">
   </head>
