--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,13 @@
 <header id="header">
     <div class="grid-container">
         <div class="grid-x">
-            <div class="cell small-2 small-order-2 medium-order-1">
-                <a href="#"><h1>Platzi</h1></a>
+            <div class="cell small-7 small-order-2 medium-order-1">
+                <img src="assets/img/logo.gif" height="100%" width="100%">
             </div>
-            <div class="cell small-1 show-for-small-only small-order-3 small-offset-9" style="text-align: right; font-size: 2em; cursor: pointer;">
+            <div class="cell small-1 show-for-small-only small-order-3 small-offset-9" style="margin-left: 85px; text-align: right; font-size: 2em; height:50x;">
                 <button type="button" data-toggle="offCanvas"> <i class="fi-list"></i></button>
             </div>
-            <div class="cell small-12 medium-4 medium-offset-6 small-order-1 medium-order-2">
+            <div class="cell small-12 medium-4 medium-offset-6 small-order-1 medium-order-2" style="margin-left: 0;">
                 {{> navigation-menu}}
             </div>
         </div>
